<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/tictactoe"
        android:textAlignment="center"
        android:textSize="60sp"
        android:gravity="center_horizontal"/>

    <Button
        android:id="@+id/playButton"
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:text="@string/play"
        android:layout_marginTop="100dp"
        android:onClick="onClick"/>

    <Button
        android:id="@+id/gameHistoryButton"
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:text="@string/gameHistory"
        android:onClick="onClick"/>

    <Button
        android:id="@+id/aboutButton"
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:text="@string/about"/>

</LinearLayout>