<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <Button
        android:id="@+id/bluetoothButton"
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:text="@string/via_bluetooth" />

    <Button
        android:id="@+id/vsComputerButton"
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:text="@string/vs_computer" />

    <Button
        android:id="@+id/localButton"
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:text="@string/local_game"
        android:onClick="onClick"/>

</LinearLayout>