<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NicknameActivity"
    android:gravity="center"
    android:orientation="vertical">

    <EditText
        android:id="@+id/nickname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="30sp"
        android:hint="@string/nickname"
        android:importantForAutofill="no"
        android:inputType="text">
    </EditText>

    <EditText
        android:id="@+id/nickname2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="30sp"
        android:hint="@string/nickname2"
        android:importantForAutofill="no"
        android:inputType="text">
    </EditText>

    <Button
        android:id="@+id/nicknameButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:textAlignment="center"
        android:textSize="30sp"
        android:onClick="onClick">
    </Button>


</LinearLayout>